convert to maven project
improve setup/development cycle with antlr4 generation plugin

move files in proper src folder

much more ;)